RShinyApp/EverestInsights/www/style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');

body {
  font-family: 'Karla', sans-serif;
  font-weight: 400;
  background-color: #f9f8fd;
}

h2 {
  font-weight: 700;
}

.navbar {
  width: 100%;
  height: 80px;
  padding-top: 0.5em;
  margin-bottom: 80px;
}

.logo {
  display: inline-block;
}

.navbar-text {
  float: right;
}

.card {
  background-color: #fff;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  -moz-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
  -webkit-box-shadow:  0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
  color: rgba(0,0,0,.87);
  margin: 8px 0;
  padding: 15px;
  overflow: hidden;
  position: relative;
}

.selectize-dropdown {
  bottom: 100% !important; 
  top:auto!important;
}

